--- a/translations/seo.ru.yml
+++ b/translations/seo.ru.yml
@@ -1,5 +1,6 @@
-# SEO mocks
-site_name: "limba.com.ua"
-title: "limba.com.ua"
-description: ""
-keywords: ""
+# SEO defaults
+default:
+  site_name: "limba.com.ua"
+  title: "limba.com.ua"
+  description: ""
+  keywords: ""
