--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -1,42 +1,54 @@
 # Base
 base:
-  no: "Нет"
-  yes: "Да"
-  back: "Назад"
-  send: "Отправить"
-  submit: "Отправить"
-  reset: "Сброс"
-  show: "Показать"
-  overview: "Обзор"
-  new: "Новый"
-  create: "Создать"
-  edit: "Редактировать"
-  editing: "Редактирование"
-  update: "Обновить"
-  done: "Готово"
-  list: "Список"
-  delete: "Удалить"
-  remove: "Удалить"
-  add: "Добавить"
-  go: "Перейти"
-  log_in: "Войти"
-  close: "Закрыть"
-  warning: "Предупреждение"
-  error: "Ошибка"
-  attention: "Внимание"
-  absent: "Отсутствует"
-  filter: "Фильтр"
+  no: "нет"
+  yes: "да"
+  back: "назад"
+  send: "отправить"
+  submit: "отправить"
+  reset: "сброс"
+  show: "показать"
+  overview: "обзор"
+  new: "новый"
+  create: "создать"
+  edit: "редактировать"
+  editing: "редактирование"
+  update: "обновить"
+  done: "готово"
+  list: "список"
+  delete: "удалить"
+  remove: "удалить"
+  add: "добавить"
+  go: "перейти"
+  log_in: "войти"
+  close: "закрыть"
+  warning: "предупреждение"
+  error: "ошибка"
+  attention: "внимание"
+  absent: "отсутствует"
+  filter: "фильтр"
   github: "GitHub"
 # Language
 language:
+  en: "английский"
+  es: "испанский"
   uk: "украинский"
   ru: "русский"
+  pl: "польский"
   native:
+    en: "english"
+    es: "español"
     uk: "українська"
     ru: "русский"
+    pl: "polski"
   short:
+    en: "анг"
+    es: "исп"
     uk: "укр"
     ru: "рус"
+    pl: "пол"
     native:
+      en: "eng"
+      es: "esp"
       uk: "укр"
       ru: "рус"
+      pl: "pol"
