--- a/translations/messages.uk.yml
+++ b/translations/messages.uk.yml
@@ -1,42 +1,54 @@
 # Base
 base:
-  no: "Ні"
-  yes: "Так"
-  back: "Назад"
-  send: "Відправити"
-  submit: "Відправити"
-  reset: "Скинути"
-  show: "Переглянути"
-  overview: "Огляд"
-  new: "Новий"
-  create: "Створити"
-  edit: "Редагувати"
-  editing: "Редагування"
-  update: "Оновити"
-  done: "Готово"
-  list: "Список"
-  delete: "Видалити"
-  remove: "Удалить"
-  add: "Додати"
-  go: "Перейти"
-  log_in: "Увійти"
-  close: "Закрити"
-  warning: "Попередження"
-  error: "Помилка"
-  attention: "Увага"
-  absent: "Відсутнє"
-  filter: "Фільтр"
+  no: "ні"
+  yes: "так"
+  back: "назад"
+  send: "відправити"
+  submit: "відправити"
+  reset: "скинути"
+  show: "переглянути"
+  overview: "огляд"
+  new: "новий"
+  create: "створити"
+  edit: "редагувати"
+  editing: "редагування"
+  update: "оновити"
+  done: "готово"
+  list: "список"
+  delete: "видалити"
+  remove: "удалить"
+  add: "додати"
+  go: "перейти"
+  log_in: "увійти"
+  close: "закрити"
+  warning: "попередження"
+  error: "помилка"
+  attention: "увага"
+  absent: "відсутнє"
+  filter: "фільтр"
   github: "GitHub"
 # Language
 language:
+  en: "англійська"
+  es: "іспанська"
   uk: "українська"
   ru: "російська"
+  pl: "польська"
   native:
+    en: "english"
+    es: "español"
     uk: "українська"
     ru: "русский"
+    pl: "polski"
   short:
+    en: "анг"
+    es: "ісп"
     uk: "укр"
     ru: "рос"
+    pl: "пол"
     native:
+      en: "eng"
+      es: "esp"
       uk: "укр"
       ru: "рус"
+      pl: "pol"
