--- a/translations/seo.uk.yml
+++ b/translations/seo.uk.yml
@@ -1,6 +1,6 @@
 # SEO defaults
 default:
-  site_name: "limba.com.ua"
-  title: "limba.com.ua"
+  site_name: "diftong.com"
+  title: "diftong.com"
   description: ""
   keywords: ""
