--- a/translations/seo.en.yml
+++ b/translations/seo.en.yml
@@ -1,6 +1,6 @@
 # SEO defaults
 default:
-  site_name: "diftong.com"
+  domain: "diftong.com"
   title: "diftong.com"
   description: ""
   keywords: ""
