--- a/translations/seo.ru.yml
+++ b/translations/seo.ru.yml
@@ -1,6 +1,5 @@
 # SEO defaults
-default:
-  site_name: "diftong.com"
-  title: "diftong.com"
-  description: ""
-  keywords: ""
+title: "title (ru)"
+description: "description (ru)"
+keywords: "keywords (ru)"
+logo_text: "logo text (en)"
