--- a/translations/seo.uk.yml
+++ b/translations/seo.uk.yml
@@ -1,6 +1,5 @@
 # SEO defaults
-default:
-  site_name: "diftong.com"
-  title: "diftong.com"
-  description: ""
-  keywords: ""
+title: "title (uk)"
+description: "description (uk)"
+keywords: "keywords (uk)"
+logo_text: "logo text (en)"
