--- a/translations/commands.en.yml
+++ b/translations/commands.en.yml
@@ -23,3 +23,8 @@ db_rebuild:
   cache_clear:
     success: "CACHE CLEAR - successfully completed!"
     fault: "CACHE CLEAR - fault! Closing execution of the command!"
+# app:setting:check
+setting_check:
+  user_not_found: "User with {{field}} '{{value}}' was not found."
+  setting_not_found: "Setting '{{name}}' was not found."
+  setting_is_disabled: "WARNING: this setting is disabled!"
