--- a/translations/commands.uk.yml
+++ b/translations/commands.uk.yml
@@ -23,3 +23,8 @@ db_rebuild:
   cache_clear:
     success: "CACHE CLEAR - успішно виконано!"
     fault: "CACHE CLEAR - помилка! Закриття виконання команди!"
+# app:setting:check
+setting_check:
+  user_not_found: "Не вдалося знайти користувача з {{field}} '{{value}}'."
+  setting_not_found: "Setting '{{name}}' was not found."
+  setting_is_disabled: "УВАГА: це налаштування вимкнено!"
