small trans upd

--- a/translations/menu.en.yml
+++ b/translations/menu.en.yml
@@ -2,7 +2,7 @@
 items:
   grammar: "Grammar"
   phonetics: "Phonetics"
-  lexis: "lexis"
+  lexis: "Lexis"
   articles: "Articles"
   topics: "Topics"
   lyrics: "lyrics"
