SEO footer mock

--- a/translations/seo.en.yml
+++ b/translations/seo.en.yml
@@ -1,5 +1,5 @@
 # SEO defaults
 title: "title (en)"
-description: "description (en)"
+description: "English and Spanish online - Diftong"
 keywords: "keywords (en)"
 logo_text: "logo text (en)"
