--- a/translations/seo.ru.yml
+++ b/translations/seo.ru.yml
@@ -1,5 +1,5 @@
 # SEO defaults
 title: "title (ru)"
-description: "description (ru)"
+description: "Английский и Испанский языки онлайн - Diftong"
 keywords: "keywords (ru)"
 logo_text: "logo text (en)"
