--- a/translations/seo.uk.yml
+++ b/translations/seo.uk.yml
@@ -1,5 +1,5 @@
 # SEO defaults
 title: "title (uk)"
-description: "description (uk)"
+description: "Англійська та Іспанська мови онлайн - Diftong"
 keywords: "keywords (uk)"
 logo_text: "logo text (en)"
